scrollbar pushing content fix

--- a/css/scss/_general.scss
+++ b/css/scss/_general.scss
@@ -4,9 +4,9 @@
     padding: 0
 }  
 
-
+html { overflow-y: scroll; }
 body{
-  
+ 
     // font-size: 16px;
     background-color: #fff;
     height: 100%;
