--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
   margin: 0;
   padding: 0; }
 
+html {
+  overflow-y: scroll; }
+
 body {
   background-color: #fff;
   height: 100%; }
